--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p class="powered-by-technology-text">Powered by Technology</p>
     <p class="introduction-text">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
 
-  <div class="container">
+  <div class="container" role="main">
 
     <div class="frame" id="supervisor">
       <span>Supervisor</span>
