--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 </head>
 
 <body>
+   
+  <div class="work-area" role="main">
+
     <p class="efficient-delivery-text">Reliable, efficient delivery</p>
     <p class="powered-by-technology-text">Powered by Technology</p>
     <p class="introduction-text">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
 
-  <div class="container" role="main">
-
+    <div class="grid-container">
     <div class="frame" id="supervisor">
       <span>Supervisor</span>
       <p>Monitors activity to identify project roadblocks</p>
@@ -41,7 +43,7 @@
       <p>Uses data from past projects to provide better delivery estimates</p>
       <img src="images/icon-calculator.svg" alt="calculator icon">
     </div>
-
+  </div>
   </div> 
     <footer>
       <p class="attribution">
