--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
 
 <body>
    
-  <div class="work-area" role="main">
-
-    <p class="efficient-delivery-text">Reliable, efficient delivery</p>
-    <p class="powered-by-technology-text">Powered by Technology</p>
+  <div class="work-area">
+    
+    <header>
+    <p class="efficient-delivery-text">Reliable, efficient delivery<br>
+      <span class="powered-by-technology-text">Powered by Technology</span>
+    </p>
     <p class="introduction-text">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
+    </header>
 
-    <div class="grid-container">
+    <div class="grid-container" role="main">
     <div class="frame" id="supervisor">
       <span>Supervisor</span>
       <p>Monitors activity to identify project roadblocks</p>
