--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
    
   <div class="work-area">
-    
+
     <header>
-    <p class="efficient-delivery-text">Reliable, efficient delivery<br>
+    <h1 class="efficient-delivery-text">Reliable, efficient delivery<br>
       <span class="powered-by-technology-text">Powered by Technology</span>
-    </p>
+    </h1>
     <p class="introduction-text">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
     </header>
 
