--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
    
-  <div class="work-area">
+  <div class="work-area" role="main">
 
     <header>
     <h1 class="efficient-delivery-text">Reliable, efficient delivery<br>
@@ -22,7 +22,7 @@
     <p class="introduction-text">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
     </header>
 
-    <div class="grid-container" role="main">
+    <div class="grid-container">
     <div class="frame" id="supervisor">
       <span>Supervisor</span>
       <p>Monitors activity to identify project roadblocks</p>
