--- a/index.html
+++ b/index.html
@@ -1,53 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
-  <title>Frontend Mentor | Four card feature section</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+	<link rel="stylesheet" href="styles.css">
+
+	<title>Frontend Mentor | Four card feature section</title>
 </head>
 
 <body>
    
-  <div class="work-area" role="main">
-
     <header>
-    <h1 class="efficient-delivery-text">Reliable, efficient delivery<br>
-      <span class="powered-by-technology-text">Powered by Technology</span>
-    </h1>
-    <p class="introduction-text">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
+    	<h1>Reliable, efficient delivery
+      		<strong>Powered by Technology</strong>
+    	</h1>
+    	<p>Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
     </header>
 
-    <div class="grid-container">
-    <div class="frame" id="supervisor">
-      <span>Supervisor</span>
-      <p>Monitors activity to identify project roadblocks</p>
-      <img src="images/icon-supervisor.svg" alt="supervisor icon">
-    </div>
+	<main>
+    	<article class="card" id="supervisor">
+      		<h2>Supervisor</h2>
+      		<p>Monitors activity to identify project roadblocks</p>
+      		<img src="images/icon-supervisor.svg" alt=""aria-hidden="true">
+   	 	</article>
 
-    <div class="frame" id="team-builder">
-      <span> Team Builder</span>
-      <p>Scans our talent network to create the optimal team for your project</p>
-      <img src="images/icon-team-builder.svg" alt="team buider icon">
-    </div>
+    	<article class="card" id="team-builder">
+			<h2> Team Builder</h2>
+			<p>Scans our talent network to create the optimal team for your project</p>
+			<img src="images/icon-team-builder.svg" alt=""aria-hidden="true">
+    	</article>
 
-    <div class="frame" id="karma">
-      <span>Karma</span>
-      <p>Regularly evaluates our talent to ensure quality</p>
-      <img src="images/icon-karma.svg" alt="karma icon">
-    </div>
+    	<article class="card" id="karma">
+			<h2>Karma</h2>
+			<p>Regularly evaluates our talent to ensure quality</p>
+			<img src="images/icon-karma.svg" alt=""aria-hidden="true">
+    	</article>
 
-    <div class="frame" id="calculator">
-      <span>Calculator</span>
-      <p>Uses data from past projects to provide better delivery estimates</p>
-      <img src="images/icon-calculator.svg" alt="calculator icon">
-    </div>
-  </div>
-  </div> 
+    	<article class="card" id="calculator">
+			<h2>Calculator</h2>
+			<p>Uses data from past projects to provide better delivery estimates</p>
+			<img src="images/icon-calculator.svg" alt=""aria-hidden="true">
+   		 </article>
+	</main>
+
     <footer>
       <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
